[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "s3_url_helper"
dynamic = ["version"]
authors = [
    { name="Nikolai Orlov", email="nikolaiorl@gmail.com" },
]
description = "S3Url is a helper class that can help with simple operations on AWS S3 objects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'boto3'
]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-cov',
    'moto',
    'pylint',
    'assertpy',
]
build = [
    'setuptools_scm',
    'twine',
    'build'
]

[project.urls]
"Homepage" = "https://github.com/n-orlov/s3-url-helper"
"Bug Tracker" = "https://github.com/n-orlov/s3-url-helper/issues"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme="no-local-version"